Fix overflow for iframe controls #452558858771640

--- a/public/sources/less/content/layout/controls/controls.less
+++ b/public/sources/less/content/layout/controls/controls.less
@@ -19,7 +19,6 @@
   }
   // env('ELEMENT_CONTROLS_DELAY')
   &.vcv-ui-outline-controls-delay-toggle-feature {
-    overflow: visible;
     .vcv-ui-outline-control-dropdown-content {
       position: absolute;
     }
